qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbitorrent
  annotations:
    cert-manager.io/cluster-issuer: "prod-issuer"
    forecastle.stakater.com/expose: "true"
    # forecastle.stakater.com/icon: "https://raw.githubusercontent.com/jellyfin/jellyfin-ux/c6d7b1fc16c8d62df9125d6463f3d404e0e81bae/branding/SVG/icon-transparent.svg"
    forecastle.stakater.com/appName: "Qbittorrent"
    forecastle.stakater.com/group: "MediaCenter"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - qbittorrent.geekhomeinside.io
      secretName: qbittorrent-ingress-tls
  rules:
    - host: qbittorrent.geekhomeinside.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
